All core functionality in place (second set, some files missed in first checkin

--- a/ADExpert/admin_main.html
+++ b/ADExpert/admin_main.html
@@ -2,14 +2,14 @@ _R_IFTOP
 <div class="pagecontent">
 <p align="right"><a href="/cgi-bin/adexpert?action=logout">Log out</a></p>
 <p><b>ADExpert Administration</b>
-<p>Manage</p>
 <ul>
-<li><a href="/cgi-bin/adexpert?action=all_firearms">View and manage firearms</a></li>
+<li><a href="/cgi-bin/adexpert?action=all_inventory_firearms">View and manage firearms in inventory</a></li>
 <li><a href="/cgi-bin/adexpert?action=all_trading_partners">View and manage trading partners</a></li>
 <li><a href="/cgi-bin/adexpert?action=all_acquisitions">View and manage acquisitions</a></li>
 <li><a href="/cgi-bin/adexpert?action=all_dispositions">View and manage dispositions</a></li>
 </ul>
 <ul>
+<li><a href="/cgi-bin/adexpert?action=all_sold_firearms">View and manage sold firearms</a></li>
 <li><a href="/cgi-bin/adexpert?action=all_disposition_pre_edits">View and manage disposition_pre_edits</a></li>
 <li><a href="/cgi-bin/adexpert?action=all_trading_partner_pre_edits">View and manage trading_partner_pre_edits</a></li>
 <li><a href="/cgi-bin/adexpert?action=all_acquisition_pre_edits">View and manage acquisition_pre_edits</a></li>
