--- a/ADExpert/new_firearm.html
+++ b/ADExpert/new_firearm.html
@@ -94,7 +94,7 @@ maxlength="40"></td>
 
 </table>
 <center><input type=submit value="Add firearm"></center>
-<input type="hidden" name="action" value="all_firearms">
+<input type="hidden" name="action" value="all_inventory_firearms">
 <input type="hidden" name="option" value="save">
 
 </form>
