--- a/ADExpert/edit_acquisition.html
+++ b/ADExpert/edit_acquisition.html
@@ -31,7 +31,7 @@ _R_REPEAT_START_THREE
 maxlength="40" value="_R_ACQUISITION_ID" readonly></td>
 </tr>
 <tr cols="2">
-<td align="right"><b>Firearm ID</b></td>
+<td align="right"><b>Firearm</b></td>
 <td align="left">
 <select name="firearm_id">
 _R_REPEAT_START_ONE
@@ -43,22 +43,23 @@ _R_REPEAT_END_ONE
 <tr cols="2">
 <td align="right"><b>Acquisition Date</b></td>
 <td align="left"><input type="text" name="acquisition_date" size="40"
-maxlength="40" value="_R_ACQUISITION_DATE"></td>
+maxlength="40" placeholder="2012-01-12" required pattern="\d{4}-\d{2}-\d{2}" value="_R_ACQUISITION_DATE"></td>
 </tr>
 <tr cols="2">
-<td align="right"><b>Trading Partner ID</b></td>
+<td align="right"><b>Trading Partner</b></td>
 <td align="left">
 <select name="trading_partner_id">
 _R_REPEAT_START_TWO
 <option value="_R_TRADING_PARTNER_ID">_R_NAME _R_FFL_LICENSE_NUMBER</option>
 _R_REPEAT_END_TWO
 </select>
+</td>
 </tr>
 
 </table>
 <center><input type=submit value="Save Changes"></center>
 <input type="hidden" name="action" value="all_acquisitions">
-<input type="hidden" name="acquisition_id" value="_R_acquisition_ID">
+<input type="hidden" name="acquisition_id" value="_R_ACQUISITION_ID">
 <input type="hidden" name="option" value="update">
 
 </form>
