--- a/ADExpert/edit_firearm.html
+++ b/ADExpert/edit_firearm.html
@@ -101,7 +101,7 @@ maxlength="40" value="_R_NOTES"></td>
 
 </table>
 <center><input type=submit value="Save Changes"></center>
-<input type="hidden" name="action" value="all_firearms">
+<input type="hidden" name="action" value="all_inventory_firearms">
 <input type="hidden" name="firearm_id" value="_R_firearm_ID">
 <input type="hidden" name="option" value="update">
 
