--- a/ADExpert/new_acquisition.html
+++ b/ADExpert/new_acquisition.html
@@ -1,5 +1,19 @@
 _R_IFTOP
 _R_NAVBAR
+_R_QUERY_START_ONE
+select f.firearm_id, manufacturer, model, serial_number
+from firearm f
+left join acquisition a
+on f.firearm_id = a.firearm_id
+where acquisition_id is null
+order by serial_number
+_R_QUERY_END_ONE
+
+_R_QUERY_START_TWO
+select trading_partner_id, name, ffl_license_number
+from trading_partner
+order by name
+_R_QUERY_END_TWO
 <div class="pagecontent">
 <h2 align=center>Add a new acquisition</h2>
 
@@ -7,19 +21,29 @@ _R_NAVBAR
 <table align="center" cellpadding="5">
 
 <tr cols="2">
-<td align="right"><b>Firearm ID</b></td>
-<td align="left"><input type="text" name="firearm_id" size="40"
-maxlength="40"></td>
+<td align="right"><b>Firearm</b></td>
+<td>
+<select name="firearm_id">
+_R_REPEAT_START_ONE
+<option value="_R_FIREARM_ID">_R_SERIAL_NUMBER _R_MANUFACTURER _R_MODEL</option>
+_R_REPEAT_END_ONE
+</select>
+</td>
 </tr>
 <tr cols="2">
 <td align="right"><b>Acquisition Date</b></td>
 <td align="left"><input type="text" name="acquisition_date" size="40"
-maxlength="40"></td>
+maxlength="40" placeholder="2012-01-12" required pattern="\d{4}-\d{2}-\d{2}"></td>
 </tr>
 <tr cols="2">
-<td align="right"><b>Trading Partner ID</b></td>
-<td align="left"><input type="text" name="trading_partner_id" size="40"
-maxlength="40"></td>
+<td align="right"><b>Trading Partner</b></td>
+<td>
+<select name="trading_partner_id">
+_R_REPEAT_START_TWO
+<option value="_R_TRADING_PARTNER_ID">_R_NAME _R_FFL_LICENSE_NUMBER</option>
+_R_REPEAT_END_TWO
+</select>
+</td>
 </tr>
 
 </table>
