--- a/ADExpert/new_disposition.html
+++ b/ADExpert/new_disposition.html
@@ -1,5 +1,19 @@
 _R_IFTOP
 _R_NAVBAR
+_R_QUERY_START_ONE
+SELECT a.acquisition_id, f.firearm_id, f.manufacturer, f.model, f.serial_number
+FROM acquisition a
+JOIN firearm f ON a.firearm_id = f.firearm_id
+LEFT JOIN disposition d ON d.acquisition_id = a.acquisition_id
+WHERE d.acquisition_id IS NULL
+ORDER BY serial_number
+_R_QUERY_END_ONE
+
+_R_QUERY_START_TWO
+select trading_partner_id, name, ffl_license_number
+from trading_partner
+order by name
+_R_QUERY_END_TWO
 <div class="pagecontent">
 <h2 align=center>Add a new disposition</h2>
 
@@ -9,17 +23,27 @@ _R_NAVBAR
 <tr cols="2">
 <td align="right"><b>Disposition Date</b></td>
 <td align="left"><input type="text" name="disposition_date" size="40"
-maxlength="40"></td>
+maxlength="40" placeholder="2012-01-12" required pattern="\d{4}-\d{2}-\d{2}"></td>
 </tr>
 <tr cols="2">
-<td align="right"><b>Acquisition ID</b></td>
-<td align="left"><input type="text" name="acquisition_id" size="40"
-maxlength="40"></td>
+<td align="right"><b>Firearm</b></td>
+<td align="left">
+<select type="text" name="acquisition_id">
+_R_REPEAT_START_ONE
+<option value="_R_ACQUISITION_ID">_R_SERIAL_NUMBER _R_MANUFACTURER _R_MODEL</option>
+_R_REPEAT_END_ONE
+</select>
+</td>
 </tr>
 <tr cols="2">
-<td align="right"><b>Trading Partner ID</b></td>
-<td align="left"><input type="text" name="trading_partner_id" size="40"
-maxlength="40"></td>
+<td align="right"><b>Trading Partner</b></td>
+<td align="left">
+<select name="trading_partner_id">
+_R_REPEAT_START_TWO
+<option value="_R_TRADING_PARTNER_ID">_R_NAME _R_FFL_LICENSE_NUMBER</option>
+_R_REPEAT_END_TWO
+</select>
+</td>
 </tr>
 <tr cols="2">
 <td align="right"><b>4473 Number</b></td>
