--- a/makegunlisting/admin_main.html
+++ b/makegunlisting/admin_main.html
@@ -1,9 +1,9 @@
 _R_IFTOP
 <DIV class="pagecontent">
 <P align="right"><a href="/cgi-bin/makegunlisting?action=logout">Log out</a></P>
-<P><B>makegunlisting Administration</B>
+<P><B>Makegunlisting administration</B>
 <UL>
-<LI><a href="/cgi-bin/makegunlisting?action=all_listings">View and manage Listings</a></LI>
+<LI><a href="/cgi-bin/makegunlisting?action=all_listings">View and manage listings</a></LI>
 <LI><a href="/cgi-bin/makegunlisting?action=inventory">View inventory</a></LI>
 </UL>
 </DIV>
