Added hooks, logging

--- a/ADExpert/all_acquisitions.html
+++ b/ADExpert/all_acquisitions.html
@@ -15,6 +15,7 @@ insert into acquisition values(_R_ACQUISITION_ID, _R_FIREARM_ID, _R_ACQUISITION_
 _R_OPTION_END_SAVE
 
 _R_OPTION_START_UPDATE
+_R_HOOK_LOG_ACQUISITION_CHANGES
 update acquisition set
 firearm_id = _R_FIREARM_ID,
 acquisition_date = _R_ACQUISITION_DATE,
