--- a/ADExpert/all_dispositions.html
+++ b/ADExpert/all_dispositions.html
@@ -15,6 +15,7 @@ insert into disposition values(_R_DISPOSITION_ID, _R_DISPOSITION_DATE, _R_ACQUIS
 _R_OPTION_END_SAVE
 
 _R_OPTION_START_UPDATE
+_R_HOOK_LOG_DISPOSITION_CHANGES
 update disposition set
 disposition_date = _R_DISPOSITION_DATE,
 acquisition_id = _R_ACQUISITION_ID,
