--- a/ADExpert/all_inventory_firearms.html
+++ b/ADExpert/all_inventory_firearms.html
@@ -11,6 +11,7 @@ insert into firearm values(_R_FIREARM_ID, _R_MANUFACTURER, _R_IMPORTER, _R_MODEL
 _R_OPTION_END_SAVE
 
 _R_OPTION_START_UPDATE
+_R_HOOK_LOG_FIREARM_CHANGES
 update firearm set
 manufacturer = _R_MANUFACTURER,
 importer = _R_IMPORTER,
