--- a/ADExpert/all_trading_partners.html
+++ b/ADExpert/all_trading_partners.html
@@ -15,6 +15,7 @@ insert into trading_partner values(_R_TRADING_PARTNER_ID, _R_NAME, _R_FFL_LICENS
 _R_OPTION_END_SAVE
 
 _R_OPTION_START_UPDATE
+_R_HOOK_LOG_TRADING_PARTNER_CHANGES
 update trading_partner set
 name = _R_NAME,
 ffl_license_number = _R_FFL_LICENSE_NUMBER,
