--- a/ADExpert/edit_trading_partner.html
+++ b/ADExpert/edit_trading_partner.html
@@ -26,7 +26,7 @@ maxlength="40" value="_R_NAME" required placeholder="ABC Firearms"></td>
 <tr cols="2">
 <td align="right"><b>FFL License Number</b></td>
 <td align="left"><input type="text" name="ffl_license_number" size="40"
-maxlength="40" value="_R_FFL_LICENSE_NUMBER" placeholder="5-75-439-01-5G-07308"></td>
+maxlength="40" value="_R_FFL_LICENSE_NUMBER" placeholder="1-23-456-78-9A-12345" pattern="[\w\d]{1}-[\w\d]{2}-[\w\d]{3}-[\w\d]{2}-[\w\d]{2}-[\w\d]{5}"></td>
 </tr>
 <tr cols="2">
 <td align="right"><b>Premises Address1</b></td>
