--- a/ADExpert/new_disposition.html
+++ b/ADExpert/new_disposition.html
@@ -51,12 +51,12 @@ _R_REPEAT_END_TWO
 maxlength="40"></td>
 </tr>
 <tr cols="2">
-<td align="right"><b>Lost Stolen Atf Incident Number</b></td>
+<td align="right"><b>Lost Stolen ATF Incident Number</b></td>
 <td align="left"><input type="text" name="lost_stolen_atf_incident_number" size="40"
 maxlength="40"></td>
 </tr>
 <tr cols="2">
-<td align="right"><b>Lost Stolen Pd Incident Number</b></td>
+<td align="right"><b>Lost Stolen PD Incident Number</b></td>
 <td align="left"><input type="text" name="lost_stolen_pd_incident_number" size="40"
 maxlength="40"></td>
 </tr>
