--- a/ADExpert/new_trading_partner.html
+++ b/ADExpert/new_trading_partner.html
@@ -12,9 +12,9 @@ _R_NAVBAR
 maxlength="40"></td>
 </tr>
 <tr cols="2">
-<td align="right"><b>Ffl License Number</b></td>
+<td align="right"><b>FFL License Number</b></td>
 <td align="left"><input type="text" name="ffl_license_number" size="40"
-maxlength="40"></td>
+maxlength="40" placeholder="1-23-456-78-9A-12345" pattern="[\w\d]{1}-[\w\d]-{2}-[\w\d]{3}-[\w\d]{2}-[\w\d]{2}-[\w\d]{5}"></td>
 </tr>
 <tr cols="2">
 <td align="right"><b>Premises Address1</b></td>
