Huge refactor to change the config system

--- a/ADExpert/admin_main.html
+++ b/ADExpert/admin_main.html
@@ -1,20 +1,15 @@
 _R_IFTOP
 <div class="pagecontent">
-<p align="right"><a href="/cgi-bin/adexpert?action=logout">Log out</a></p>
+<p align="right"><a href="_R_SCRIPT_NAME?action=logout">Log out</a></p>
 <p><b>ADExpert Administration</b>
-<ul>
-<li><a href="/cgi-bin/adexpert?action=all_inventory_firearms">View and manage firearms in inventory</a></li>
-<li><a href="/cgi-bin/adexpert?action=all_trading_partners">View and manage trading partners</a></li>
-<li><a href="/cgi-bin/adexpert?action=all_acquisitions">View and manage acquisitions</a></li>
-<li><a href="/cgi-bin/adexpert?action=all_dispositions">View and manage dispositions</a></li>
-</ul>
-<ul>
-<li><a href="/cgi-bin/adexpert?action=all_sold_firearms">View and manage sold firearms</a></li>
-<li><a href="/cgi-bin/adexpert?action=all_disposition_pre_edits">View and manage disposition_pre_edits</a></li>
-<li><a href="/cgi-bin/adexpert?action=all_trading_partner_pre_edits">View and manage trading_partner_pre_edits</a></li>
-<li><a href="/cgi-bin/adexpert?action=all_acquisition_pre_edits">View and manage acquisition_pre_edits</a></li>
-<li><a href="/cgi-bin/adexpert?action=all_edit_logs">View and manage edit_logs</a></li>
-<li><a href="/cgi-bin/adexpert?action=all_firearm_pre_edits">View and manage firearm_pre_edits</a></li>
-</ul>
+<table>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_inventory_firearms">View and manage firearms in inventory</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_disposed_firearms">View and manage disposed firearms</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_trading_partners">View and manage trading partners</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_acquisitions">View and manage acquisitions</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_dispositions">View and manage dispositions</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=all_edit_logs">View edit log</a></td></tr>
+<tr><td><a href="_R_SCRIPT_NAME?action=audit_reports">View audit reports</a></td></tr>
+</table>
 </div>
 </body></html>
