--- a/ADExpert/all_acquisitions.html
+++ b/ADExpert/all_acquisitions.html
@@ -49,16 +49,16 @@ _R_REPEAT_START_ONE
 <td>_R_SERIAL_NUMBER</td>
 <td>_R_ACQUISITION_DATE</td>
 <td>_R_NAME</td>
-<td><a href="/cgi-bin/adexpert?action=all_acquisitions&option=delete&acquisition_id=_R_ACQUISITION_ID&sort=_R_SORT">
+<td><a href="_R_SCRIPT_NAME?action=all_acquisitions&option=delete&acquisition_id=_R_ACQUISITION_ID&sort=_R_SORT">
 delete</a>
-&nbsp;&nbsp;&nbsp; <a href="/cgi-bin/adexpert?action=edit_acquisition&acquisition_id=_R_ACQUISITION_ID">edit</a>
+&nbsp;&nbsp;&nbsp; <a href="_R_SCRIPT_NAME?action=edit_acquisition&acquisition_id=_R_ACQUISITION_ID">edit</a>
 </td>
 </tr>
 _R_REPEAT_END_ONE
 
 </table>
-<p align="center">Add a <a href="/cgi-bin/adexpert?action=new_acquisition">new
+<p align="center">Add a <a href="_R_SCRIPT_NAME?action=new_acquisition">new
 acquisition</a></p>
-<p align="center">Return to <a href="/cgi-bin/adexpert">main screen</a></p>
+<p align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></p>
 </div>
 </body></html>
