--- a/ADExpert/all_firearm_pre_edits.html
+++ b/ADExpert/all_firearm_pre_edits.html
@@ -6,43 +6,12 @@ _R_DEFAULT_START
 sort = FIREARM_PRE_EDIT_ID
 _R_DEFAULT_END
 
-_R_OPTION_START_DELETE
-delete from firearm_pre_edit where firearm_pre_edit_id = _R_FIREARM_PRE_EDIT_ID
-_R_OPTION_END_DELETE
-
-_R_OPTION_START_SAVE
-insert into firearm_pre_edit values(_R_FIREARM_PRE_EDIT_ID, _R_FIREARM_ID, _R_MANUFACTURER, _R_IMPORTER, _R_MODEL, _R_SERIAL_NUMBER, _R_FIREARM_TYPE, _R_CALIBER, _R_CABINET, _R_TRAY, _R_HAMMER, _R_BUTT, _R_GRIPS, _R_PARTS, _R_GRADE, _R_LOCKUP, _R_TRIGGER_TYPE, _R_NOTES, _R_256)
-_R_OPTION_END_SAVE
-
-_R_OPTION_START_UPDATE
-update firearm_pre_edit set
-firearm_id = _R_FIREARM_ID,
-manufacturer = _R_MANUFACTURER,
-importer = _R_IMPORTER,
-model = _R_MODEL,
-serial_number = _R_SERIAL_NUMBER,
-firearm_type = _R_FIREARM_TYPE,
-caliber = _R_CALIBER,
-cabinet = _R_CABINET,
-tray = _R_TRAY,
-hammer = _R_HAMMER,
-butt = _R_BUTT,
-grips = _R_GRIPS,
-parts = _R_PARTS,
-grade = _R_GRADE,
-lockup = _R_LOCKUP,
-trigger_type = _R_TRIGGER_TYPE,
-notes = _R_NOTES,
-256 = _R_256
-where firearm_pre_edit_id = _R_FIREARM_PRE_EDIT_ID
-_R_OPTION_END_UPDATE
-
 _R_QUERY_START_ONE
-select firearm_pre_edit_id, firearm_id, manufacturer, importer, model, serial_number, firearm_type, caliber, cabinet, tray, hammer, butt, grips, parts, grade, lockup, trigger_type, notes, 256
+select firearm_pre_edit_id, firearm_id, manufacturer, importer, model, serial_number, firearm_type, caliber, cabinet, tray, hammer, butt, grips, parts, grade, lockup, trigger_type, notes
 from firearm_pre_edit
 order by _R_SORT
 _R_QUERY_END_ONE
-<h2 align=center>All firearm_pre_edits</h2>
+<h2 align=center>All firearm records pre-edit</h2>
 
 <table align="center" cellpadding="5">
 <tr>
@@ -64,8 +33,6 @@ _R_QUERY_END_ONE
 <td><b><a href="adexpert?action=all_firearm_pre_edits&sort=lockup">Lockup</b></a></td>
 <td><b><a href="adexpert?action=all_firearm_pre_edits&sort=trigger_type">Trigger Type</b></a></td>
 <td><b><a href="adexpert?action=all_firearm_pre_edits&sort=notes">Notes</b></a></td>
-<td><b><a href="adexpert?action=all_firearm_pre_edits&sort=256">256</b></a></td>
-<td><b>Actions</b></td>
 </tr>
 
 _R_REPEAT_START_ONE
@@ -88,17 +55,10 @@ _R_REPEAT_START_ONE
 <td>_R_LOCKUP</td>
 <td>_R_TRIGGER_TYPE</td>
 <td>_R_NOTES</td>
-<td>_R_256</td>
-<td><a href="/cgi-bin/adexpert?action=all_firearm_pre_edits&option=delete&firearm_pre_edit_id=_R_FIREARM_PRE_EDIT_ID&sort=_R_SORT">
-delete</a>
-&nbsp;&nbsp;&nbsp; <a href="/cgi-bin/adexpert?action=edit_firearm_pre_edit&firearm_pre_edit_id=_R_FIREARM_PRE_EDIT_ID">edit</a>
-</td>
 </tr>
 _R_REPEAT_END_ONE
 
 </table>
-<p align="center">Add a <a href="/cgi-bin/adexpert?action=new_firearm_pre_edit">new
-firearm_pre_edit</a></p>
-<p align="center">Return to <a href="/cgi-bin/adexpert">main screen</a></p>
+<p align="center">Return to <a href="_R_SCRIPT_NAME?action=audit_reports">audit reports</a></p>
 </div>
 </body></html>
