--- a/ADExpert/all_sold_firearms.html
+++ b/ADExpert/all_sold_firearms.html
@@ -48,12 +48,12 @@ _R_REPEAT_START_ONE
 <td>_R_SERIAL_NUMBER</td>
 <td>_R_FIREARM_TYPE</td>
 <td>_R_CALIBER</td>
-<td><a href="/cgi-bin/adexpert?action=edit_firearm&firearm_id=_R_FIREARM_ID">edit</a>
+<td><a href="_R_SCRIPT_NAME?action=edit_firearm&firearm_id=_R_FIREARM_ID">edit</a>
 </td>
 </tr>
 _R_REPEAT_END_ONE
 
 </table>
-<p align="center">Return to <a href="/cgi-bin/adexpert">main screen</a></p>
+<p align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></p>
 </div>
 </body></html>
