--- a/ADExpert/all_trading_partners.html
+++ b/ADExpert/all_trading_partners.html
@@ -62,16 +62,16 @@ _R_REPEAT_START_ONE
 <td>_R_MAILING_STATE</td>
 <td>_R_EMAIL</td>
 <td>_R_PHONE</td>
-<td><a href="/cgi-bin/adexpert?action=all_trading_partners&option=delete&trading_partner_id=_R_TRADING_PARTNER_ID&sort=_R_SORT">
+<td><a href="_R_SCRIPT_NAME?action=all_trading_partners&option=delete&trading_partner_id=_R_TRADING_PARTNER_ID&sort=_R_SORT">
 delete</a>
-&nbsp;&nbsp;&nbsp; <a href="/cgi-bin/adexpert?action=edit_trading_partner&trading_partner_id=_R_TRADING_PARTNER_ID">edit</a>
+&nbsp;&nbsp;&nbsp; <a href="_R_SCRIPT_NAME?action=edit_trading_partner&trading_partner_id=_R_TRADING_PARTNER_ID">edit</a>
 </td>
 </tr>
 _R_REPEAT_END_ONE
 
 </table>
-<p align="center">Add a <a href="/cgi-bin/adexpert?action=new_trading_partner">new
+<p align="center">Add a <a href="_R_SCRIPT_NAME?action=new_trading_partner">new
 trading_partner</a></p>
-<p align="center">Return to <a href="/cgi-bin/adexpert">main screen</a></p>
+<p align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></p>
 </div>
 </body></html>
