--- a/ADExpert/new_disposition.html
+++ b/ADExpert/new_disposition.html
@@ -17,7 +17,7 @@ _R_QUERY_END_TWO
 <div class="pagecontent">
 <h2 align=center>Add a new disposition</h2>
 
-<form action="/cgi-bin/adexpert" method="POST">
+<form action="_R_SCRIPT_NAME" method="POST">
 <table align="center" cellpadding="5">
 
 <tr cols="2">
@@ -67,6 +67,6 @@ maxlength="40"></td>
 <input type="hidden" name="option" value="save">
 
 </form>
-<p align="center">Return to <a href="/cgi-bin/adexpert">main screen</a></p>
+<p align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></p>
 </div>
 </body></html>
