--- a/makegunlisting/admin_main.html
+++ b/makegunlisting/admin_main.html
@@ -1,10 +1,10 @@
 _R_IFTOP
 <DIV class="pagecontent">
-<P align="right"><a href="/cgi-bin/makegunlisting?action=logout">Log out</a></P>
+<P align="right"><a href="_R_SCRIPT_NAME?action=logout">Log out</a></P>
 <P><B>Makegunlisting administration</B>
 <UL>
-<LI><a href="/cgi-bin/makegunlisting?action=all_listings">View and manage listings</a></LI>
-<LI><a href="/cgi-bin/makegunlisting?action=inventory">View inventory</a></LI>
+<LI><a href="_R_SCRIPT_NAME?action=all_listings">View and manage listings</a></LI>
+<LI><a href="_R_SCRIPT_NAME?action=inventory">View inventory</a></LI>
 </UL>
 </DIV>
 </BODY></HTML>
