--- a/makegunlisting/all_listings.html
+++ b/makegunlisting/all_listings.html
@@ -54,15 +54,15 @@ _R_REPEAT_START_ONE
 <TD>_R_LOCKUP</TD>
 <TD>_R_TRIGGER_TYPE</TD>
 <TD>_R_NOTES</TD>
-<TD><a href="/cgi-bin/makegunlisting?action=edit_listing&serial_number=_R_SERIAL_NUMBER">edit</a>
-&nbsp;&nbsp;&nbsp; <a href="/cgi-bin/makegunlisting?action=view_listing&serial_number=_R_SERIAL_NUMBER">view listing</a>
+<TD><a href="_R_SCRIPT_NAME?action=edit_listing&serial_number=_R_SERIAL_NUMBER">edit</a>
+&nbsp;&nbsp;&nbsp; <a href="_R_SCRIPT_NAME?action=view_listing&serial_number=_R_SERIAL_NUMBER">view listing</a>
 
 </TD>
 </TR>
 _R_REPEAT_END_ONE
 
 </TABLE>
-<P align="center">Return to <a href="/cgi-bin/makegunlisting">main screen</a></P>
-<P align="center">Export listings to a <a href="/cgi-bin/makegunlisting?action=export_listings">file</a>
+<P align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></P>
+<P align="center">Export listings to a <a href="_R_SCRIPT_NAME?action=export_listings">file</a>
 </DIV>
 </BODY></HTML>
