--- a/makegunlisting/edit_listing.html
+++ b/makegunlisting/edit_listing.html
@@ -9,7 +9,7 @@ _R_QUERY_END_ONE
 <H2 align=center>Edit listing</H2>
 
 _R_REPEAT_START_ONE
-<FORM action="/cgi-bin/makegunlisting" method="POST">
+<FORM action="_R_SCRIPT_NAME" method="POST">
 <TABLE align="center" cellpadding="5">
 
 <TR cols="2">
@@ -111,6 +111,6 @@ maxlength="256">_R_NOTES</textarea></TD>
 
 </FORM>
 _R_REPEAT_END_ONE
-<P align="center">Return to <a href="/cgi-bin/makegunlisting">main screen</a></P>
+<P align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></P>
 </DIV>
 </BODY></HTML>
