--- a/makegunlisting/inventory.html
+++ b/makegunlisting/inventory.html
@@ -39,7 +39,7 @@ _R_REPEAT_END_ONE
 _R_REPEAT_START_TWO
 <P align="center">Total count: _R_COUNT
 _R_REPEAT_END_TWO
-<P align="center">View <a href="/cgi-bin/makegunlisting?action=inventory_detail">inventory detail</a>
-<P align="center">Return to <a href="/cgi-bin/makegunlisting">main screen</a></P>
+<P align="center">View <a href="_R_SCRIPT_NAME?action=inventory_detail">inventory detail</a>
+<P align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></P>
 </DIV>
 </BODY></HTML>
