--- a/makegunlisting/inventory_detail.html
+++ b/makegunlisting/inventory_detail.html
@@ -39,6 +39,6 @@ _R_REPEAT_END_ONE
 _R_REPEAT_START_TWO
 <P align="center">Total count: _R_COUNT
 _R_REPEAT_END_TWO
-<P align="center">Return to <a href="/cgi-bin/makegunlisting">main screen</a></P>
+<P align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></P>
 </DIV>
 </BODY></HTML>
