--- a/makegunlisting/login.html
+++ b/makegunlisting/login.html
@@ -1,6 +1,6 @@
 _R_IFTOP
 <DIV class="pagecontent">
-<FORM action="/cgi-bin/makegunlisting" type="POST">
+<FORM action="_R_SCRIPT_NAME" type="POST">
 <TABLE align="center" cols="2" class="box">
 <TR><TD colspan="2"><FONT color=red>_R_ERRORSTR1</FONT></TD><TD></TD></TR>
 <TR><TD>Email:</TD><TD><INPUT type="TEXT" name="email" size=25
