--- a/ADExpert/all_trading_partner_pre_edits.html
+++ b/ADExpert/all_trading_partner_pre_edits.html
@@ -6,42 +6,12 @@ _R_DEFAULT_START
 sort = TRADING_PARTNER_PRE_EDIT_ID
 _R_DEFAULT_END
 
-_R_OPTION_START_DELETE
-delete from trading_partner_pre_edit where trading_partner_pre_edit_id = _R_TRADING_PARTNER_PRE_EDIT_ID
-_R_OPTION_END_DELETE
-
-_R_OPTION_START_SAVE
-insert into trading_partner_pre_edit values(_R_TRADING_PARTNER_PRE_EDIT_ID, _R_TRADING_PARTNER_ID, _R_NAME, _R_FFL_LICENSE_NUMBER, _R_PREMISES_ADDRESS1, _R_PREMISES_ADDRESS2, _R_PREMISES_CITY, _R_PREMISES_STATE, _R_PREMISES_ZIP, _R_MAILING_ADDRESS1, _R_MAILING_ADDRESS2, _R_MAILING_CITY, _R_MAILING_STATE, _R_MAILING_ZIP, _R_WEBSITE, _R_EMAIL, _R_PHONE, _R_NOTES)
-_R_OPTION_END_SAVE
-
-_R_OPTION_START_UPDATE
-update trading_partner_pre_edit set
-trading_partner_id = _R_TRADING_PARTNER_ID,
-name = _R_NAME,
-ffl_license_number = _R_FFL_LICENSE_NUMBER,
-premises_address1 = _R_PREMISES_ADDRESS1,
-premises_address2 = _R_PREMISES_ADDRESS2,
-premises_city = _R_PREMISES_CITY,
-premises_state = _R_PREMISES_STATE,
-premises_zip = _R_PREMISES_ZIP,
-mailing_address1 = _R_MAILING_ADDRESS1,
-mailing_address2 = _R_MAILING_ADDRESS2,
-mailing_city = _R_MAILING_CITY,
-mailing_state = _R_MAILING_STATE,
-mailing_zip = _R_MAILING_ZIP,
-website = _R_WEBSITE,
-email = _R_EMAIL,
-phone = _R_PHONE,
-notes = _R_NOTES
-where trading_partner_pre_edit_id = _R_TRADING_PARTNER_PRE_EDIT_ID
-_R_OPTION_END_UPDATE
-
 _R_QUERY_START_ONE
 select trading_partner_pre_edit_id, trading_partner_id, name, ffl_license_number, premises_address1, premises_address2, premises_city, premises_state, premises_zip, mailing_address1, mailing_address2, mailing_city, mailing_state, mailing_zip, website, email, phone, notes
 from trading_partner_pre_edit
 order by _R_SORT
 _R_QUERY_END_ONE
-<h2 align=center>All trading_partner_pre_edits</h2>
+<h2 align=center>All trading partner records pre-edit</h2>
 
 <table align="center" cellpadding="5">
 <tr>
@@ -63,7 +33,6 @@ _R_QUERY_END_ONE
 <td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=email">Email</b></a></td>
 <td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=phone">Phone</b></a></td>
 <td><b><a href="adexpert?action=all_trading_partner_pre_edits&sort=notes">Notes</b></a></td>
-<td><b>Actions</b></td>
 </tr>
 
 _R_REPEAT_START_ONE
@@ -86,16 +55,10 @@ _R_REPEAT_START_ONE
 <td>_R_EMAIL</td>
 <td>_R_PHONE</td>
 <td>_R_NOTES</td>
-<td><a href="/cgi-bin/adexpert?action=all_trading_partner_pre_edits&option=delete&trading_partner_pre_edit_id=_R_TRADING_PARTNER_PRE_EDIT_ID&sort=_R_SORT">
-delete</a>
-&nbsp;&nbsp;&nbsp; <a href="/cgi-bin/adexpert?action=edit_trading_partner_pre_edit&trading_partner_pre_edit_id=_R_TRADING_PARTNER_PRE_EDIT_ID">edit</a>
-</td>
 </tr>
 _R_REPEAT_END_ONE
 
 </table>
-<p align="center">Add a <a href="/cgi-bin/adexpert?action=new_trading_partner_pre_edit">new
-trading_partner_pre_edit</a></p>
-<p align="center">Return to <a href="/cgi-bin/adexpert">main screen</a></p>
+<p align="center">Return to <a href="_R_SCRIPT_NAME?action=audit_reports">audit reports</a></p>
 </div>
 </body></html>
