--- a/ADExpert/new_firearm.html
+++ b/ADExpert/new_firearm.html
@@ -3,7 +3,7 @@ _R_NAVBAR
 <div class="pagecontent">
 <h2 align=center>Add a new firearm</h2>
 
-<form action="/cgi-bin/adexpert" method="POST">
+<form action="_R_SCRIPT_NAME" method="POST">
 <table align="center" cellpadding="5">
 
 <tr cols="2">
@@ -98,6 +98,6 @@ maxlength="40"></td>
 <input type="hidden" name="option" value="save">
 
 </form>
-<p align="center">Return to <a href="/cgi-bin/adexpert">main screen</a></p>
+<p align="center">Return to <a href="_R_SCRIPT_NAME">main screen</a></p>
 </div>
 </body></html>
